--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@marlowe.io/adapter": "^0.3.0-beta",
     "@marlowe.io/language-core-v1": "^0.3.0-beta",
     "@marlowe.io/runtime-core": "^0.3.0-beta",
     "@marlowe.io/runtime-lifecycle": "^0.3.0-beta",
